New section in home.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,12 +12,12 @@
     <!--</links>-->
     <links>
       <ul class="navbar-nav ml-auto nav-flex-icons"><!-- -->
-        <li class="nav-item active waves-light" mdbWavesEffect>
-        <a class="nav-link" routerLink="/home">Strona główna <span class="sr-only">(current)</span></a>
+        <li class="nav-item waves-light" routerLinkActive="active" routerLink="/home" mdbWavesEffect>
+        <a class="nav-link" >O studiach <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link">O studiach</a>
-        </li>
+        <!--<li class="nav-item waves-light" mdbWavesEffect>-->
+        <!--<a class="nav-link">O studiach</a>-->
+        <!--</li>-->
         <li class="nav-item waves-light" mdbWavesEffect>
         <a class="nav-link">Organizacja</a>
         </li>
