--- a/src/app/sites/home/home.component.html
+++ b/src/app/sites/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="full-bg-img">
     <div class="mask flex-center pattern-5"><!-- -->
       <div class="container">
-        <div class="white-text text-center wow fadeInUp" data-wow-delay="1.2s">
+        <div class="white-text text-center wow fadeInUp" data-wow-delay="0.6s">
 
           <div class="icon-slider" [ngClass]="{'animateLeftRight': startedHome1Animation}">
             <i class="bounce" [class]="activeIcon"></i>
@@ -57,8 +57,8 @@
           <!--<p>wymaga znajomości nowoczesnych języków programowania, w tym języka Java.</p>-->
 
           <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp" >
-              <div class="card card-image mb-4 card1">
+            <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+              <div class="card card-image mb-4 card1" mdbWavesEffect>
                 <div class="text-white text-center d-flex flex-center align-items-center rgba-blue-light py-5 px-4">
                   <div>
 
@@ -71,7 +71,7 @@
 
             </div><!-- end card -->
             <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInRight" data-wow-delay="0.3s">
-              <div class="card card-image mb-4 card2">
+              <div class="card card-image mb-4 card2" mdbWavesEffect>
 
                 <div class="text-white text-center d-flex flex-center align-items-center rgba-blue-light py-5 px-4">
                   <div>
@@ -85,7 +85,7 @@
               </div><!-- end card -->
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInRight" data-wow-delay="0.6s">
-              <div class="card card-image mb-4 card3">
+              <div class="card card-image mb-4 card3" mdbWavesEffect>
 
                 <div class="text-white text-center d-flex flex-center align-items-center rgba-blue-light py-5 px-4">
                   <div>
@@ -99,7 +99,7 @@
               </div><!-- end card -->
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
-              <div class="card card-image mb-4 card4">
+              <div class="card card-image mb-4 card4" mdbWavesEffect>
 
                 <div class="text-white text-center d-flex flex-center align-items-center rgba-blue-light py-5 px-4">
                   <div>
@@ -113,7 +113,7 @@
               </div><!-- end card -->
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-              <div class="card card-image mb-4 card5">
+              <div class="card card-image mb-4 card5" mdbWavesEffect>
 
                 <div class="text-white text-center d-flex flex-center align-items-center rgba-blue-light py-5 px-4">
                   <div>
@@ -127,7 +127,7 @@
               </div><!-- end card -->
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInRight" data-wow-delay="0.9s">
-              <div class="card card-image mb-4 card6">
+              <div class="card card-image mb-4 card6" mdbWavesEffect>
 
                 <div class="text-white text-center d-flex flex-center align-items-center rgba-blue-light py-5 px-4">
                   <div>
@@ -140,8 +140,8 @@
 
               </div><!-- end card -->
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp"  data-wow-delay="0.6s">
-              <div class="card card-image mb-4 card7">
+            <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
+              <div class="card card-image mb-4 card7" mdbWavesEffect>
 
                 <div class="text-white text-center d-flex flex-center align-items-center rgba-blue-light py-5 px-4">
                   <div>
@@ -154,8 +154,8 @@
 
               </div><!-- end card -->
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp"  data-wow-delay="0.9s">
-              <div class="card card-image mb-4 card8">
+            <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.9s">
+              <div class="card card-image mb-4 card8" mdbWavesEffect>
 
                 <div class="text-white text-center d-flex flex-center align-items-center rgba-blue-light py-5 px-4">
                   <div>
@@ -177,47 +177,62 @@
   </div>
 </div>
 
-<!--<div class="view view-100vh" id="home-3">-->
-  <!--<div class="full-bg-img">-->
-    <!--<div class="mask flex-center rgba-yellow-slight">&lt;!&ndash;  &ndash;&gt;-->
-      <!--<div class="container">-->
-        <!--<div class="white-text wow" data-wow-delay="1s">-->
+<div class="view view-100vh" id="home-3">
+  <div class="full-bg-img">
+    <div class="mask flex-center rgba-indigo-strong"><!--  -->
+      <div class="container">
+        <div class="white-text wow" data-wow-delay="1s">
 
-          <!--<h4 class="font-weight-bold mb-4">-->
-            <!--<strong>Dla kogo studia?</strong>-->
-          <!--</h4>-->
-          <!--<p class="">O przyjęcie na studia podyplomowe "TECHNOLOGIE INTERNETOWE" mogą ubiegać się wszystkie osoby-->
-            <!--posiadające dyplom licencjata, inżyniera lub magistra, zainteresowane poszerzeniem swojej wiedzy o elementy-->
-            <!--informatyki z dziedziny nowoczesnych technologii internetowych.</p>-->
+          <h2 class="font-weight-bold mb-4">
+            <strong>Dla kogo studia?</strong>
+          </h2>
+          <p class="">O przyjęcie na studia podyplomowe "Technologie Internetowe" mogą ubiegać się wszystkie osoby
+            posiadające dyplom licencjata, inżyniera lub magistra, zainteresowane poszerzeniem swojej wiedzy o elementy
+            informatyki z dziedziny nowoczesnych technologii internetowych. W szczególności studia "Technologie Internetowe" adresowane są do:</p>
 
-          <!--<p>W szczególności studia "Technologie Internetowe" adresowane są do:</p>-->
-          <!--<ul>-->
-            <!--<li>osób projektujących, programujących i wdrażających rozwiązania internetowe i intranetowe,</li>-->
-            <!--<li>administratorów sieci komputerowych i osób zarządzających witrynami sieci Web, a także bazami danych,-->
-            <!--</li>-->
-            <!--<li>pracowników działów informatycznych podmiotów gospodarczych, urzędów administracji samorządowej i-->
-              <!--rządowej,-->
-            <!--</li>-->
-            <!--<li>nauczycieli informatyki pragnących podnieść swoje kwalifikacje do nauczania przedmiotów z zakresu-->
-              <!--tematyki studiów,-->
-            <!--</li>-->
+          <ul>
+            <!--Carousel Wrapper-->
+            <mdb-carousel [isControls]="false" [animation]="'slide'" [interval]="3000">
+              <!--First slide-->
+              <mdb-carousel-item>
+                <li>osób projektujących, programujących i wdrażających rozwiązania internetowe i intranetowe,</li>
+              </mdb-carousel-item>
+              <mdb-carousel-item>
+                <li>administratorów sieci komputerowych i osób zarządzających witrynami sieci Web, a także bazami danych</li>
+              </mdb-carousel-item>
+              <mdb-carousel-item>
+                <li>pracowników działów informatycznych podmiotów gospodarczych, urzędów administracji samorządowej i rządowej</li>
+              </mdb-carousel-item>
+              <mdb-carousel-item>
+                <li>nauczycieli informatyki pragnących podnieść swoje kwalifikacje do nauczania przedmiotów z zakresu tematyki studiów</li>
+              </mdb-carousel-item>
+              <mdb-carousel-item>
+                <li>absolwentów wyższych uczelni o kierunkach nieinformatycznych zainteresowanych tematyką studiów,</li>
+              </mdb-carousel-item>
+              <mdb-carousel-item>
+                <li>a także wszystkich pasjonatów programowania usług sieciowych, tworzenia witryn responsywnych i programowania urządzeń mobilnych</li>
+              </mdb-carousel-item>
+
+            </mdb-carousel>
+            <!--/.Carousel Wrapper-->
+            <!--<li>osób projektujących, programujących i wdrażających rozwiązania internetowe i intranetowe</li>-->
+            <!--<li>administratorów sieci komputerowych i osób zarządzających witrynami sieci Web, a także bazami danych</li>-->
+            <!--<li>pracowników działów informatycznych podmiotów gospodarczych, urzędów administracji samorządowej i rządowej</li>-->
+            <!--<li>nauczycieli informatyki pragnących podnieść swoje kwalifikacje do nauczania przedmiotów z zakresu tematyki studiów</li>-->
             <!--<li>absolwentów wyższych uczelni o kierunkach nieinformatycznych zainteresowanych tematyką studiów,</li>-->
-            <!--<li>a także wszystkich pasjonatów programowania usług sieciowych, tworzenia witryn responsywnych i-->
-              <!--programowania-->
-              <!--urządzeń mobilnych.-->
-            <!--</li>-->
+            <!--<li>a także wszystkich pasjonatów programowania usług sieciowych, tworzenia witryn responsywnych i programowania urządzeń mobilnych</li>-->
 
-          <!--</ul>-->
+          </ul>
 
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</div>-->
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <div class="view view-100vh" id="home-4">
   <div class="full-bg-img">
-    <div class="mask flex-center rgba-blue-strong"><!--  -->
+    <div class="mask flex-center rgba-indigo-light"><!--  -->
       <div class="container">
         <div class="white-text wow" data-wow-delay="1s">
 
@@ -518,17 +533,17 @@
 </div>
 
 <!--<div class="view view-100vh" id="home-end">-->
-  <!--<div class="full-bg-img">-->
-    <!--<div class="mask flex-center rgba-yellow-slight">&lt;!&ndash;  &ndash;&gt;-->
-      <!--<div class="container">-->
-        <!--<div class="white-text wow" data-wow-delay="1s">-->
+<!--<div class="full-bg-img">-->
+<!--<div class="mask flex-center rgba-yellow-slight">&lt;!&ndash;  &ndash;&gt;-->
+<!--<div class="container">-->
+<!--<div class="white-text wow" data-wow-delay="1s">-->
 
-          <!--<h2>coś na przekierowanie na koniec</h2>-->
+<!--<h2>coś na przekierowanie na koniec</h2>-->
 
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 <!--</div>-->
 
 <!--<div class="py-5 mt-3">-->
