--- a/src/app/sites/page-not-found/page-not-found.component.html
+++ b/src/app/sites/page-not-found/page-not-found.component.html
@@ -1,7 +1,23 @@
-<div class="container">
-  <div class="row text-center pt-5 pb-5">
+<div class="view view-page-100vh">
+  <div class="full-bg-img">
+    <div class="mask flex-center rgba-blue-light"><!-- -->
+      <div class="container wow shake" data-wow-delay="0.5s">
+        <div class="white-text" >
 
-    <h1><mdb-badge color="red">404</mdb-badge> Nie znaleziono takiej strony!</h1>
+          <h1><mdb-badge color="red">404</mdb-badge> Nie znaleziono takiej strony!</h1>
 
+        </div>
+
+        <div class="content-100vh">
+
+        </div>
+
+      </div>
+    </div>
   </div>
 </div>
+
+
+
+
+
