--- a/src/app/sites/panel/files/file-explorer/file-explorer.component.html
+++ b/src/app/sites/panel/files/file-explorer/file-explorer.component.html
@@ -53,9 +53,15 @@
         <span>21 lis 2018 15:32</span>
       </td>
       <td class="file-menu">
+        <div class="btn-group">
+          <a color="primary" class="waves-light">
+            <i class="fa fa-eye" aria-hidden="true"></i>
+            <!-- fa-eye-slash -->
+          </a>
+        </div>
 
         <div class="btn-group" placement="right" mdbDropdown>
-          <a mdbDropdownToggle color="primary" class="waves-light" placement="right" mdbWavesEffect>
+          <a mdbDropdownToggle color="primary" class="waves-light" placement="right">
             <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
           </a>
 
