--- a/src/app/sites/home/home.component.html
+++ b/src/app/sites/home/home.component.html
@@ -16,6 +16,7 @@
             mdbBtn
             type="button"
             color="white"
+            [ngx-scroll-to]="'#home-2'"
             mdbWavesEffect>
             <i class="fa fa-angle-double-down" aria-hidden="true"></i> Dowiedz się więcej
           </button>
@@ -33,9 +34,9 @@
   </div>
 </div>
 
-<div class="view view-100vh" id="home-2">
+<div class="view view-100vh-longer" id="home-2"><!-- view-100vh -->
   <div class="full-bg-img">
-    <div class="mask flex-center"><!--  -->
+    <div class="flex-center mask-longer"><!--  -->
       <div class="container">
         <div class="white-text wow" data-wow-delay="1s">
 
@@ -179,9 +180,9 @@
 
 <div class="view view-100vh" id="home-3">
   <div class="full-bg-img">
-    <div class="mask flex-center rgba-indigo-strong"><!--  -->
+    <div class="mask flex-center rgba-blue-grey-strong"><!-- rgba-orange-light -->
       <div class="container">
-        <div class="white-text wow" data-wow-delay="1s">
+        <div class="white-text wow fadeIn" data-wow-delay="0.6s">
 
           <h2 class="font-weight-bold mb-4">
             <strong>Dla kogo studia?</strong>
@@ -230,9 +231,9 @@
   </div>
 </div>
 
-<div class="view view-100vh" id="home-4">
+<div class="view view-100vh-longer" id="home-4">
   <div class="full-bg-img">
-    <div class="mask flex-center rgba-indigo-light"><!--  -->
+    <div class="mask-longer flex-center rgba-indigo-strong"><!--  -->
       <div class="container">
         <div class="white-text wow" data-wow-delay="1s">
 
@@ -284,7 +285,7 @@
           <section>
 
             <!--Section heading-->
-            <h2 class="text-center h1 py-5">
+            <h2 class="text-center py-5">
               <strong>Poznaj języki i technologie w ramach przedmiotów</strong>
             </h2>
 
@@ -293,10 +294,10 @@
             <!--cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>-->
 
             <!--Grid row-->
-            <div class="row text-center wow fadeInUp" data-wow-delay="0.5s">
+            <div class="row text-center">
 
               <!--Grid column-->
-              <div class="col-lg-4 col-md-12 mb-4">
+              <div class="col-lg-4 col-md-12 mb-4 wow fadeInUp" data-wow-delay="0.5s"  >
 
                 <div class="card-item">
 
@@ -333,7 +334,7 @@
               <!--Grid column-->
 
               <!--Grid column-->
-              <div class="col-lg-4 col-md-6 mb-4">
+              <div class="col-lg-4 col-md-6 mb-4 wow fadeInUp" data-wow-delay="0.6s">
 
                 <div class="card-item">
                   <!--Featured image-->
@@ -375,7 +376,7 @@
               <!--Grid column-->
 
               <!--Grid column-->
-              <div class="col-lg-4 col-md-6 mb-4">
+              <div class="col-lg-4 col-md-6 mb-4 wow fadeInUp" data-wow-delay="0.7s">
 
                 <div class="card-item">
                   <!--Featured image-->
@@ -416,10 +417,10 @@
             </div>
             <!--Grid row-->
 
-            <div class="row white-text-center wow fadeInUp" data-wow-delay="0.75-s">
+            <div class="row white-text-center">
 
               <!--Grid column-->
-              <div class="col-lg-4 col-md-12 mb-4">
+              <div class="col-lg-4 col-md-12 mb-4 wow fadeInUp" data-wow-delay="0.5s" >
 
                 <div class="card-item">
                   <div class="view overlay rounded z-depth-1 waves-light" mdbWavesEffect>
@@ -455,7 +456,7 @@
 
               </div>
 
-              <div class="col-lg-4 col-md-12 mb-4">
+              <div class="col-lg-4 col-md-12 mb-4 wow fadeInUp" data-wow-delay="0.6s">
 
                 <div class="card-item">
                   <div class="view overlay rounded z-depth-1 waves-light" mdbWavesEffect>
@@ -488,7 +489,7 @@
 
               </div>
 
-              <div class="col-lg-4 col-md-12 mb-4">
+              <div class="col-lg-4 col-md-12 mb-4 wow fadeInUp" data-wow-delay="0.7s">
 
                 <div class="card-item">
                   <div class="view overlay rounded z-depth-1 waves-light" mdbWavesEffect>
