--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,6 +20,9 @@
     //background-position: 0 0;
     //background-size: 115%;
   }
+  .mobile-only {
+    display: none;
+  }
 }
 
 // Medium devices (tablets, 768px and up)
