Working with API file management (add folder, rename, delete)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,11 @@
     <mdb-navbar-brand>
       <a class="logo navbar-brand" routerLink="/home"><strong><i class="fa fa-cloud" aria-hidden="true"></i> Technologie
         internetowe</strong></a>
+      <!--TODO: dodać coś o studiach podyplomowych-->
     </mdb-navbar-brand>
+    <!--TODO: zmienić paski na po rozwinięciu menu-->
+    <!--<i class="fa fa-remove" aria-hidden="true"></i>-->
+
     <!--<links>-->
     <!--<ul class="navbar-nav mr-auto">-->
 
