--- a/src/app/sites/panel/files/file-explorer/file-explorer.component.html
+++ b/src/app/sites/panel/files/file-explorer/file-explorer.component.html
@@ -47,14 +47,14 @@
         <i class="fa fa-file file-or-folder-icon" aria-hidden="true" *ngIf="!element.isFolder"></i>
       </td>
       <td class="file-name">
-        <a (click)="navigate(element)">{{ element.name }}</a>
+        <a (click)="navigate(element)">{{ element.name }} {{element?.file_extension}}</a>
       </td>
       <td class="file-modified">
-        <span>21 lis 2018 15:32</span>
+        <span>{{element.updated_at}}</span>
       </td>
       <td class="file-menu">
         <div class="btn-group">
-          <a color="primary" class="waves-light">
+          <a color="primary" class="waves-light" (click)="toogleElementVisibility(element)" mdbTooltip="Widoczność elementu dla użytkownika" placement="bottom">
             <i class="fa fa-eye" aria-hidden="true"></i>
             <!-- fa-eye-slash -->
           </a>
@@ -66,11 +66,19 @@
           </a>
 
           <div class="dropdown-menu dropdown-primary dropdown-menu-right">
-            <a class="dropdown-item" href="#">Przenieś</a>
-            <a class="dropdown-item" href="#">Zmień nazwę</a>
-            <a class="dropdown-item" href="#">Usuń</a>
+            <a class="dropdown-item">
+              <i class="fa fa-folder-open-o" aria-hidden="true"></i>Przenieś
+            </a>
+            <a class="dropdown-item" (click)="openRenameDialog(element)">
+              <i class="fa fa-pencil-square-o" aria-hidden="true"></i>Zmień nazwę
+            </a>
+            <a class="dropdown-item text-red" (click)="deleteElement(element)">
+              <i class="fa fa-trash-o" aria-hidden="true"></i>Usuń
+            </a>
             <div class="divider dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Pobierz</a>
+            <a class="dropdown-item" (click)="downloadElement(element)">
+              <i class="fa fa-download" aria-hidden="true"></i>Pobierz
+            </a>
           </div>
         </div>
       </td>
