--- a/src/app/sites/panel/files/file-explorer/modals/rename-dialog/rename-dialog.component.html
+++ b/src/app/sites/panel/files/file-explorer/modals/rename-dialog/rename-dialog.component.html
@@ -1,20 +1,35 @@
-<div class="modal-dialog modal-sm" role="document">
-  <div class="modal-content">
-    <div class="modal-header">
-      <button type="button" class="close pull-right" aria-label="Close" >
-        <!-- (click)="basicModal.hide()" -->
-        <span aria-hidden="true">×</span>
-      </button>
-      <h4 class="modal-title w-100" id="myModalLabel">Zmień nazwę</h4>
-    </div>
-    <div class="modal-body">
-      <input placeholder="Nazwa folderu" [(ngModel)]="folderName">
-    </div>
-    <div class="modal-footer">
-      <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close"  mdbWavesEffect>Anuluj</button>
-      <!-- (click)="basicModal.hide()" -->
-      <button type="button" mdbBtn color="primary" class="relative waves-light" mdbWavesEffect>Zmień nazwę</button>
-      <!-- [mat-dialog-close]="folderName" -->
-    </div>
-  </div>
+<!--<div class="modal-dialog modal-sm" role="document">-->
+  <!--<div class="modal-content">-->
+    <!--<div class="modal-header">-->
+      <!--<button type="button" class="close pull-right" aria-label="Close" >-->
+        <!--&lt;!&ndash; (click)="basicModal.hide()" &ndash;&gt;-->
+        <!--<span aria-hidden="true">×</span>-->
+      <!--</button>-->
+      <!--<h4 class="modal-title w-100" id="myModalLabel">Zmień nazwę</h4>-->
+    <!--</div>-->
+    <!--<div class="modal-body">-->
+      <!--<input placeholder="Nazwa folderu" [(ngModel)]="folderName">-->
+    <!--</div>-->
+    <!--<div class="modal-footer">-->
+      <!--<button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close"  mdbWavesEffect>Anuluj</button>-->
+      <!--&lt;!&ndash; (click)="basicModal.hide()" &ndash;&gt;-->
+      <!--<button type="button" mdbBtn color="primary" class="relative waves-light" mdbWavesEffect>Zmień nazwę</button>-->
+      <!--&lt;!&ndash; [mat-dialog-close]="folderName" &ndash;&gt;-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+
+<div class="modal-header">
+  <h4 class="modal-title">Zmiana nazwy</h4>
+  <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="modal-body">
+  <input class="form-control" [(ngModel)]="folderName">
+</div>
+<div class="modal-footer">
+  <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="activeModal.dismiss('Cancel click')"  mdbWavesEffect>Anuluj</button>
+  <!-- (click)="basicModal.hide()" -->
+  <button type="button" mdbBtn color="primary" class="relative waves-light" (click)="onClickRename()" mdbWavesEffect>Zmień nazwę</button>
 </div>
